Fixed overflow issue with mediapicker

--- a/projectum_duo/src/index.css
+++ b/projectum_duo/src/index.css
@@ -14,4 +14,5 @@ body {
 #root {
   height:inherit;
   width: auto;
+  overflow: hidden;
 }
